chore: ignore full datasets; keep samples and quick_start code

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ results/**/*.npy
 # Secrets
 .env
 .env.*
+
+# Datasets (keep only minimal samples)
+dataset/data/**
+!dataset/data/.gitkeep
+!dataset/data/sample/**
+!dataset/quick_start/**
+
