chore(lfs): track windows_freq CSVs via Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 # Enable LFS locally with: git lfs install
 
 results/windows/**/*.csv filter=lfs diff=lfs merge=lfs -text
+results/windows_freq/**/*.csv filter=lfs diff=lfs merge=lfs -text
 results/windows_features_*.csv filter=lfs diff=lfs merge=lfs -text
 results/features_*.csv filter=lfs diff=lfs merge=lfs -text
 share/**/*.zip filter=lfs diff=lfs merge=lfs -text
-
